slicing package menu

--- a/3.multiple selector/index.html
+++ b/3.multiple selector/index.html
@@ -17,7 +17,7 @@
     <section id="intro" class="main-section">
         <p>This is the intro section.</p>
     </section>
-    <section id="outro" class="main-section">
+    <section id="outro" class="main-section highlighted">
         <p>This is the outro section.</p>
     </section>
 </body>
