position absolute & fixed

--- a/2.deep dive css/box model/packages/index.html
+++ b/2.deep dive css/box model/packages/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <header class="main-header">
         <div>
             <a href="../index.html" class="main-header__brand">uHost</a>
@@ -50,6 +51,7 @@
     <main>
         <article class="plan">
             <h2 class="plan__title">Our PLUS Plan</h2>
+            <h2 class="plan__badge">RECOMMENDED</h2>
             <h2 class="plan__title grey">The most populer choice of our customers</h2>
             <p class="plan__description">
                 Benefit from increased storage and faster support to ensure that your mission-critical data and
